Update keywords in config.json

--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
         "cs.LG"
     ],
     "keywords": [
-        "Linear Attention",
+        "Video",
+        "Linear",
         "LLM",
         "RL",
         "RLHF",
