--- a/config.json
+++ b/config.json
@@ -6,6 +6,9 @@
         "cs.LG"
     ],
     "keywords": [
+        "framework",
+        "System",
+        "Generation",
         "Video",
         "Linear",
         "LLM",
