--- a/config.json
+++ b/config.json
@@ -58,7 +58,7 @@
         "enabled": true,
         "api_key_env": "DASHSCOPE_API_KEY",
         "base_url": "https://dashscope.aliyuncs.com/compatible-mode/v1",
-        "model": "qwen-long",
+        "model": "qwen-flash",
         "prompt_file": "ai_summary_prompt.txt",
         "max_papers_to_summarize": 15,
         "max_workers": 3
