--- a/config.json
+++ b/config.json
@@ -57,8 +57,8 @@
     "ai_summary": {
         "enabled": true,
         "api_key_env": "DASHSCOPE_API_KEY",
-        "base_url": "https://dashscope.aliyuncs.com/compatible-mode/v1",
-        "model": "qwen-long",
+        "base_url": "https://api.vectorengine.ai",
+        "model": "gpt-5.1",
         "prompt_file": "ai_summary_prompt.txt",
         "max_papers_to_summarize": 15,
         "max_workers": 3
