--- a/config.json
+++ b/config.json
@@ -9,11 +9,12 @@
         "framework",
         "System",
         "Generation",
-        "Video",
         "Linear",
         "LLM",
         "RL",
         "RLHF",
+        "Reinforcement learning",
+        "Reinforcement Learning",
         "Inference",
         "Training",
         "Attention",
@@ -26,6 +27,7 @@
         "Efficiency",
         "Framework",
         "Parallel",
+        "Parallelism",
         "Distributed",
         "Kernel",
         "Decode",
